ios project updated

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ gwtphonegap.showcase.gwt/.classpath
 gwtphonegap.showcase.gwt/.project
 gwtphonegap.showcase.gwt/.settings/
 gwtphonegap.showcase.gwt/target/
+gwt-phonegap-xcode/GWTPhoneGapTest/www/showcase/
