--- a/gwtphonegap.showcase.gwt/pom.xml
+++ b/gwtphonegap.showcase.gwt/pom.xml
@@ -10,7 +10,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.googlecode.gwtphonegap</groupId>
-	<artifactId>showcase-gwt</artifactId>
+	<artifactId>gwtphonegap-showcase-gwt</artifactId>
 	<version>1.2.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>Showcase GWT</name>
