--- a/gwtphonegap.showcase.gwt/pom.xml
+++ b/gwtphonegap.showcase.gwt/pom.xml
@@ -111,7 +111,7 @@
 						<linkedResource>
 							<name>war</name>
 							<type>2</type>
-							<location>${basedir}/target/${project.artifactId}-${project.version}</location>
+							<location>PROJECT_LOC/target/${project.artifactId}-${project.version}</location>
 						</linkedResource>
 					</linkedResources>
 
@@ -168,7 +168,7 @@
 		<dependency>
 			<groupId>com.googlecode.mgwt</groupId>
 			<artifactId>mgwt</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 
