--- a/gwtphonegap.showcase.gwt/pom.xml
+++ b/gwtphonegap.showcase.gwt/pom.xml
@@ -82,7 +82,7 @@
 				<configuration>
 					<downloadSources>true</downloadSources>
 					<downloadJavadocs>false</downloadJavadocs>
-					<buildOutputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</buildOutputDirectory>
+					<buildOutputDirectory>war/WEB-INF/classes</buildOutputDirectory>
 					<projectnatures>
 						<projectnature>org.eclipse.jdt.core.javanature</projectnature>
 						<projectnature>com.google.gdt.eclipse.core.webAppNature</projectnature>
