--- a/gwtphonegap.showcase.gwt/pom.xml
+++ b/gwtphonegap.showcase.gwt/pom.xml
@@ -42,7 +42,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.4.0</version>
+				<version>2.5.0</version>
 				<executions>
 
 					<execution>
@@ -58,31 +58,8 @@
 					</execution>
 
 				</executions>
-				<dependencies>
-					<dependency>
-						<groupId>com.google.gwt</groupId>
-						<artifactId>gwt-user</artifactId>
-						<version>2.4.0</version>
-					</dependency>
-				</dependencies>
 			</plugin>
-			<plugin>
-							<artifactId>maven-assembly-plugin</artifactId>
-							<executions>
-								<execution>
-									<id>assemble</id>
-									<phase>package</phase>
-									<goals>
-										<goal>single</goal>
-									</goals>
-								</execution>
-							</executions>
-							<configuration>
-								<descriptors>
-									<descriptor>src/main/assembly/clientcode.xml</descriptor>
-								</descriptors>
-							</configuration>
-						</plugin>
+			
 
 
 
@@ -123,6 +100,25 @@
 
 				</configuration>
 			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>assemble</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<descriptors>
+						<descriptor>src/main/assembly/clientcode.xml</descriptor>
+					</descriptors>
+				</configuration>
+			</plugin>
 
 		</plugins>
 		<resources>
@@ -140,7 +136,7 @@
 		<dependency>
 			<groupId>com.googlecode.gwtphonegap</groupId>
 			<artifactId>gwtphonegap</artifactId>
-			<version>2.0.0.0</version>
+			<version>2.2.0.0-SNAPSHOT</version>
 
 		</dependency>
 
