--- a/gwt/pom.xml
+++ b/gwt/pom.xml
@@ -17,7 +17,7 @@
 
 	
 	<properties>
-		<gwtversion>2.5.0</gwtversion>
+		<gwtversion>2.6.0-rc3</gwtversion>
 	</properties>
 	
 	
@@ -42,7 +42,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>gwt-maven-plugin</artifactId>
-				<version>2.5.0</version>
+				<version>2.6.0-SNAPSHOT</version>
 				<executions>
 
 					<execution>
@@ -136,7 +136,7 @@
 		<dependency>
 			<groupId>com.googlecode.gwtphonegap</groupId>
 			<artifactId>gwtphonegap</artifactId>
-			<version>2.2.0.0-SNAPSHOT</version>
+			<version>3.3.0.0-SNAPSHOT</version>
 
 		</dependency>
 
