Maven pom updates

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,10 @@
-gwt-phonegap/.classpath
-gwt-phonegap/.project
-gwt-phonegap/.settings/
-gwt-phonegap/target/
-gwt/.classpath
-gwt/.project
-gwt/.settings/
-gwt/target/
-gwt/gwt-unitCache/
+.DS_Store
+.classpath
+.project
+.settings/
+target/
+.gwt/
+.buildpath
+bin/
+/target
 
-android/bin/
-android/.classpath
-android/.project
-android/gen/
-android/assets/www/**
-
-xcode/CordovaLib/CordovaLib.xcodeproj/xcuserdata/
-xcode/CordovaLib/build/
-xcode/GWTGap.xcodeproj/project.xcworkspace/xcuserdata/
-xcode/GWTGap.xcodeproj/xcuserdata/
-xcode/build/
-xcode/cordova/console.log
-xcode/www/showcase/
-xcode/www/beep.wav
-xcode/www/index.html
-xcode/www/sound.mp3
