Update configuration files

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,6 @@ target/
 .buildpath
 bin/
 /target
-
+showcase/platforms/android/assets/www/
+showcase/platforms/android/.gradle/
+showcase/platforms/android/CordovaLib/build/
